dei o ponta pe, vai ser masi difil dq parece viu kkk

--- a/index.html
+++ b/index.html
@@ -5,9 +5,33 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <script src="https://kit.fontawesome.com/76c5f5239c.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 <body>
-  
+  <main>
+    <div class="superinfor-bg">
+      <div class="superinfor">
+        <p><img src="img/phone-solid.svg"><a href="" tel:+55 85 9999-9999">+55 85 9999-9999</a></p>
+        <p> <img src="img/location-dot-solid.svg" alt=""> Av.Leste Oeste N° 2233, Fortaleza-CE</p>
+      </div>
+    </div>
+    <header class="menu-bg">
+      <div class="menu">
+        <div class="menu-logo">
+          <a href="#">BRUTALITY</a>
+          <span>A essência do treino que vem da alma</span>
+        </div>
+        <nav class="menu-nav">
+          <ul>
+            <li><a href="#Galeria">Galeria</a></li>
+            <li><a href="#Contato">Contato</a></li>
+            <li><a href="#Sobre">Sobre</a></li>
+            <li><a href="#Planos">Planos</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </main>
 </body>
 </html>
