--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <main>
     <div class="superinfor-bg">
       <div class="superinfor">
-        <p><img src="img/phone-solid.svg"><a href="" tel:+55 85 9999-9999">+55 85 9999-9999</a></p>
-        <p> <img src="img/location-dot-solid.svg" alt=""> Av.Leste Oeste N° 2233, Fortaleza-CE</p>
+        <p> Av. Leste Oeste N° 2233, Fortaleza-CE</p>
+        <a href="" tel:+55 85 9999-9999">+55 85 9999-9999</a>
       </div>
     </div>
     <header class="menu-bg">
       <div class="menu">
         <div class="menu-logo">
-          <a href="#">BRUTALITY</a>
+          <p class="logo-menu"><a href="#">BRUTALITY</a></p>
           <span>A essência do treino que vem da alma</span>
         </div>
         <nav class="menu-nav">
@@ -27,11 +27,20 @@
             <li><a href="#Galeria">Galeria</a></li>
             <li><a href="#Contato">Contato</a></li>
             <li><a href="#Sobre">Sobre</a></li>
-            <li><a href="#Planos">Planos</a></li>
+            <li><a class="item-4" href="#Planos">Planos</a></li>
           </ul>
         </nav>
       </div>
     </header>
+    <div class="conteiner-slider">
+      <div id="slider">
+        <img class="selected" src="img/sven-mieke-MsCgmHuirDo-unsplash.jpg" >
+        <img src="img/FodEsaNZs48-unsplash.jpg" >
+        <img src="img/risen-wang-20jX9b35r_M-unsplash.jpg" >
+        <img src="img/danielle-cerullo-CQfNt66ttZM-unsplash.jpg" >
+      </div>
+    </div>
   </main>
+  <script src="/mudules/script.js"></script>
 </body>
 </html>
